Fixing margins for front-page logo so it doesn't cause overflow.

--- a/sites/all/themes/pfo/css/sass/front.scss
+++ b/sites/all/themes/pfo/css/sass/front.scss
@@ -20,11 +20,12 @@
 }
 
 .front #logo {
-  width: 98%;
+  width: 95%;
   height: auto;
   background: url('../../img/logo.png') no-repeat 50% top;
   padding-top: 4em;
   margin-bottom: -.6em;
+  margin-left: 2.5%;
 
   // Sit on top of stripe
   position: relative;
