--- a/sites/all/themes/pfo/css/stylesheets/style.css
+++ b/sites/all/themes/pfo/css/stylesheets/style.css
@@ -327,11 +327,12 @@ footer {
 }
 
 .front #logo {
-  width: 98%;
+  width: 95%;
   height: auto;
   background: url("../../img/logo.png") no-repeat 50% top;
   padding-top: 4em;
   margin-bottom: -0.6em;
+  margin-left: 2.5%;
   position: relative;
   z-index: 10;
   text-indent: 100%;
